--- a/notebooks/compare_msi_output.py.ipynb
+++ b/notebooks/compare_msi_output.py.ipynb
@@ -319,8 +319,14 @@
    "source": [
     "# Read count distribution\n",
     "\n",
-    "Comparing old and new msisensor2 read count distributions, per sample per site"
+    "Comparing old and new msisensor2 read count distributions"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Per sample per site",
+   "id": "d7dedb21c871bd2b"
   },
   {
    "cell_type": "code",
@@ -1603,7 +1609,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Per site",
+   "source": "## Per site",
    "id": "d572473ee44cad3a"
   },
   {
@@ -1955,7 +1961,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Per sample",
+   "source": "## Per sample",
    "id": "f329114f6a2f94ec"
   },
   {
