--- a/notebooks/compare_msi_output.py.ipynb
+++ b/notebooks/compare_msi_output.py.ipynb
@@ -54,7 +54,7 @@
     "    namespace=\"broad-firecloud-ccle\", workspace=\"DepMap_WGS_CN\"\n",
     ")\n",
     "new_samples = get_terra_outputs(\n",
-    "    namespace=\"broad-firecloud-ccle\", workspace=\"omics_wgs_pipeline\"\n",
+    "    namespace=\"broad-firecloud-ccle\", workspace=\"depmap_omics_wgs\"\n",
     ")\n",
     "\n",
     "sample_ids = set(old_samples[\"sample_id\"]).intersection(set(new_samples[\"sample_id\"]))\n",
